Accessibility improvements: searchbox label, skiplink fix, page landmarks, minor color contrast tweaks.

--- a/app/assets/stylesheets/trln_argon/trln_argon_shared.scss
+++ b/app/assets/stylesheets/trln_argon/trln_argon_shared.scss
@@ -231,6 +231,7 @@ body {
 
     .filter-expand {
       position: absolute;
+      width: 0 !important;
     }
 
   }
@@ -467,7 +468,7 @@ dd[aria-expanded=true] .expandable-content-controls .show-control.less {
     #included-works ul {
       list-style-type: square;
       padding-left: 2em;
-      color: #999;
+      color: #767676;
     }
 }
 
@@ -1477,7 +1478,7 @@ div.marc-record {
     .toc-element-pagerange {
       font-size: 90%;
       margin-left: 0.5em;
-      color: #aaa;
+      color: #767676;
     }
     .toc-element-author {
       display: block;
@@ -1674,15 +1675,12 @@ h2.local-filter-heading  {
 
 .syndetics-copyright {
   text-align: right;
-  color: #999;
+  color: #767676;
 }
 
 .skiplink {
-  position: absolute;
-  left: -10000px;
+  padding: 0.5em;
 }
-
-
 
 
 /* Holdings */
